--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,24 +1,32 @@
 apply plugin: 'com.android.library'
 
-android {
-    compileSdkVersion 30
-    buildToolsVersion "30.0.2"
+// Top-level build file where you can add configuration options common to all sub-projects/modules.
 
-    defaultConfig {
-        minSdkVersion 21
-        targetSdkVersion 30
-        versionCode 2
-        versionName "3.0.0"
-        ndk {
-            abiFilters "armeabi-v7a", "x86"
-        }
+buildscript {
+    ext {
+        buildToolsVersion = "30.0.2"
+        minSdkVersion = 18
+        compileSdkVersion = 30
+        targetSdkVersion = 30
+        ndkVersion = "20.1.5948944"
     }
-    lintOptions {
-       warning 'InvalidPackage'
+    repositories {
+        google()
+        mavenCentral()
+    }
+    dependencies {
+        classpath('com.android.tools.build:gradle:7.0.2')
+        // NOTE: Do not place your application dependencies here; they belong
+        // in the individual module build.gradle files
+        classpath 'com.facebook.react:react-native:+'
+        classpath 'com.github.f0ris.sweetalert:library:1.6.2'
+
     }
 }
 
-dependencies {
-    implementation 'com.facebook.react:react-native:+'
-    implementation 'com.github.f0ris.sweetalert:library:1.6.2'
+allprojects {
+    repositories {
+        mavenCentral()
+        mavenLocal()
+    }
 }
