--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,32 +1,45 @@
 apply plugin: 'com.android.library'
 
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
+android {
+    compileSdkVersion 30
+    buildToolsVersion "30.0.2"
 
-buildscript {
-    ext {
-        buildToolsVersion = "30.0.2"
-        minSdkVersion = 18
-        compileSdkVersion = 30
-        targetSdkVersion = 30
-        ndkVersion = "20.1.5948944"
+    defaultConfig {
+        minSdkVersion 18
+        targetSdkVersion 30
+        versionCode 2
+        versionName "1.0.0"
+        ndk {
+            abiFilters "armeabi-v7a", "x86"
+        }
     }
-    repositories {
-        google()
-        mavenCentral()
-    }
-    dependencies {
-        classpath('com.android.tools.build:gradle:7.0.2')
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
-        classpath 'com.facebook.react:react-native:+'
-        classpath 'com.github.f0ris.sweetalert:library:1.6.2'
-
+    lintOptions {
+       warning 'InvalidPackage'
     }
 }
 
+buildscript {
+    repositories {
+        google()
+        mavenCentral()
+        maven { url 'https://jitpack.io' }
+        maven {
+            url 'https://mvnrepository.com/artifact/com.android.tools.lint/lint-gradle-api'
+        }
+    }
+    dependencies {
+        classpath "com.android.tools.build:gradle:7.0.2"
+    }
+}
 allprojects {
     repositories {
+        google()
         mavenCentral()
-        mavenLocal()
+        maven { url 'https://maven.google.com' }
     }
+}
+
+dependencies {
+    implementation 'com.facebook.react:react-native:+'
+    implementation 'com.github.f0ris.sweetalert:library:1.6.2'
 }
