--- a/android/lib/build.gradle
+++ b/android/lib/build.gradle
@@ -1,2 +1,2 @@
 configurations.maybeCreate("default")
-artifacts.add("default", file('CustomAlertDialog.aar'))
+artifacts.add("default", file('AlertDialog.aar'))
