--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@otavioq/react-native-custom-alert",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "Custom Alert native library for React Native",
   "main": "index.js",
   "scripts": {
@@ -11,7 +11,7 @@
     "url": "git+https://github.com/otavioq/react-native-custom-alert.git"
   },
   "publishConfig": {
-    "registry": "https://registry.npmjs.org/"
+    "registry": "https://npm.pkg.github.com/"
   },
   "keywords": [],
   "author": "otavioq",
