--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@otavioq/react-native-custom-alert",
-  "version": "1.1.3",
+  "name": "@otavioq/rncustomalert",
+  "version": "1.0.0",
   "description": "Custom Alert native library for React Native",
   "main": "index.js",
   "scripts": {
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/otavioq/react-native-custom-alert.git"
+    "url": "git+https://github.com/otavioq/rncustomalert.git"
   },
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/"
@@ -17,9 +17,9 @@
   "author": "otavioq",
   "license": "",
   "bugs": {
-    "url": "https://github.com/otavioq/react-native-custom-alert/issues"
+    "url": "https://github.com/otavioq/rncustomalert/issues"
   },
-  "homepage": "https://github.com/otavioq/react-native-custom-alert",
+  "homepage": "https://github.com/otavioq/rncustomalert",
   "peerDependencies": {
     "react": "*",
     "react-native": "*"
