Fix react-native version

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -12,7 +12,7 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:7.0.2'
-        classpath 'com.facebook.react:react-native:0.67.2'
+        // classpath 'com.facebook.react:react-native:+'
     }
 }
 
@@ -39,5 +39,5 @@ android {
 }
 
 dependencies {
-    implementation 'com.facebook.react:react-native:0.67.2'
+    implementation 'com.facebook.react:react-native:+'
 }
